--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "9.75.0",
-    "@react-three/fiber": "8.13.3",
-    "@types/three": "0.152.1",
-    "framer-motion": "^10.15.1",
-    "framer-motion-3d": "^10.15.1",
-    "gsap": "^3.12.2",
+    "@react-three/drei": "^9.68.6",
+    "@react-three/fiber": "^8.13.0",
+    "framer-motion": "^10.12.16",
+    "framer-motion-3d": "^10.12.16",
+    "gsap": "^3.12.0",
+    "leva": "^0.9.34",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "0.153.0"
+    "three": "^0.146.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
     "vite": "^4.1.0"
   }
 }
