--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formspree/react": "^2.4.2",
     "@react-three/drei": "^9.68.6",
     "@react-three/fiber": "^8.13.0",
     "framer-motion": "^10.12.16",
     "framer-motion-3d": "^10.12.16",
     "gsap": "^3.12.0",
-    "jotai": "^2.3.1",
+    "jotai": "^2.1.1",
     "leva": "^0.9.34",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
